force-app/main/default/objects/Change_Log__c/Change_Log__c.object-meta.xml
<CustomObject>
    <label>Change Log</label>
    <nameField>
        <label>Change Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>