force-app/main/default/objects/Change_Log__c/fields/Action_Done_By__c.field-meta.xml
<CustomField>
    <fullName>Action_Done_By__c</fullName>
    <formula>if( 
				Action_Done_By_User__c != null, 
				HYPERLINK(Action_Done_By_User__c, Action_Done_By_User__r.FirstName + &apos; &apos; + Action_Done_By_User__r.LastName), 
				Action_Done_By_Name__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Action Done By</label>
    <type>Text</type>
</CustomField>