force-app/main/default/objects/Change_Log__c/fields/Action_Done_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Done_By_Name__c</fullName>
    <label>Action Done By (Name)</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>