force-app/main/default/objects/Change_Log__c/fields/Action_Done_By_User__c.field-meta.xml
<CustomField>
    <fullName>Action_Done_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Done By (User)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>