force-app/main/default/objects/Change_Log__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>