force-app/main/default/objects/Change_Log__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>